calico-policies/private-network-isolation/us-east/allow-egress-pods-private.yaml
# This policy opens port 53 and 5353 for DNS,
# port 2049 for communication with NFS file servers,
# ports 443 and 3260 for communication to block storage,
# port 10250 for the openVPN pod, port 4443 or 6443 for metrics-server, and
# port 2040 and 2041 on 172.21.0.0/24 for the master API server local proxy. It also
# allows pod access to other pods, denies access to private networks but allows access to
# public networks, and allows access in each zone of the region to the master.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-egress-pods-private
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 2049
      - 3260
      - 10250
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 4443 # Kubernetes 1.19 or later
      - 6443 # OpenShift 4.3 or later
      - 2049
      - 3260
      - 10250
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: TCP
  - action: Allow
    # Allows pod egress to all other pods
    destination:
      selector: projectcalico.org/orchestrator == 'k8s'
    source: {}
  # Denies pod egress to private networks. If workers are connected to a public VLAN,
  # pod egress is permitted to public networks.
  - action: Allow
    # Allows pod egress to all destination IPs that are NOT private.  This means that pod egress to these
    # private subnets listed below are denied (unless another policy allows it)
    destination:
      notNets:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for us-east: mon01, tor01, wdc04, wdc06, wdc07
      - 166.9.20.11/32
      - 166.9.20.12/32
      - 166.9.20.13/32
      - 166.9.20.37/32
      - 166.9.20.38/32
      - 166.9.20.42/32
      - 166.9.20.63/32
      - 166.9.20.79/32
      - 166.9.20.80/32
      - 166.9.20.116/32
      - 166.9.20.117/32
      - 166.9.20.118/32
      - 166.9.20.187/32
      - 166.9.20.188/32
      - 166.9.22.8/32
      - 166.9.22.9/32
      - 166.9.22.10/32
      - 166.9.22.25/32
      - 166.9.22.26/32
      - 166.9.22.42/32
      - 166.9.22.43/32
      - 166.9.22.51/32
      - 166.9.22.52/32
      - 166.9.22.54/32
      - 166.9.22.55/32
      - 166.9.22.109/32
      - 166.9.22.110/32
      - 166.9.22.215/32
      - 166.9.22.216/32
      - 166.9.24.4/32
      - 166.9.24.5/32
      - 166.9.24.18/32
      - 166.9.24.19/32
      - 166.9.24.22/32
      - 166.9.24.35/32
      - 166.9.24.36/32
      - 166.9.24.44/32
      - 166.9.24.45/32
      - 166.9.24.46/32
      - 166.9.24.47/32
      - 166.9.24.90/32
      - 166.9.24.91/32
      - 166.9.24.198/32
      - 166.9.24.199/32
      - 166.9.68.34/32
      - 166.9.68.47/32
      - 166.9.68.134/32
      - 166.9.68.135/32
      - 166.9.231.217/32
      - 166.9.232.15/32
      - 166.9.251.118/32
      ports:
      - 20000:32767
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for us-east: mon01, tor01, wdc04, wdc06, wdc07
      - 166.9.20.11/32
      - 166.9.20.12/32
      - 166.9.20.13/32
      - 166.9.20.37/32
      - 166.9.20.38/32
      - 166.9.20.42/32
      - 166.9.20.63/32
      - 166.9.20.79/32
      - 166.9.20.80/32
      - 166.9.20.116/32
      - 166.9.20.117/32
      - 166.9.20.118/32
      - 166.9.20.187/32
      - 166.9.20.188/32
      - 166.9.22.8/32
      - 166.9.22.9/32
      - 166.9.22.10/32
      - 166.9.22.25/32
      - 166.9.22.26/32
      - 166.9.22.42/32
      - 166.9.22.43/32
      - 166.9.22.51/32
      - 166.9.22.52/32
      - 166.9.22.54/32
      - 166.9.22.55/32
      - 166.9.22.109/32
      - 166.9.22.110/32
      - 166.9.22.215/32
      - 166.9.22.216/32
      - 166.9.24.4/32
      - 166.9.24.5/32
      - 166.9.24.18/32
      - 166.9.24.19/32
      - 166.9.24.22/32
      - 166.9.24.35/32
      - 166.9.24.36/32
      - 166.9.24.44/32
      - 166.9.24.45/32
      - 166.9.24.46/32
      - 166.9.24.47/32
      - 166.9.24.90/32
      - 166.9.24.91/32
      - 166.9.24.198/32
      - 166.9.24.199/32
      - 166.9.68.34/32
      - 166.9.68.47/32
      - 166.9.68.134/32
      - 166.9.68.135/32
      - 166.9.231.217/32
      - 166.9.232.15/32
      - 166.9.251.118/32
      ports:
      - 20000:32767
    protocol: TCP
    source: {}
  order: 1500
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
