calico-policies/private-network-isolation/us-east/allow-private-services.yaml
# This policy allows outgoing network traffic from worker nodes to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry,
# IBM Cloud Monitoring, and IBM Cloud Logs.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global (US East) registry subnets
      - 166.9.251.49/32
      - 166.9.251.82/32
      - 166.9.251.113/32
      # IBM Cloud Container Registry: US South registry subnets
      - 166.9.250.214/32
      - 166.9.250.246/32
      - 166.9.251.21/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring ingest: us-east
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_ingestion_private
      - 166.9.20.53/32
      - 166.9.22.50/32
      - 166.9.24.43/32
      - 166.9.231.19/32
      - 166.9.232.40/32
      - 166.9.233.36/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring API: us-east
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_rest_api
      - 166.9.231.240/32
      - 166.9.232.28/32
      - 166.9.233.17/32
      - 166.9.231.19/32
      - 166.9.232.40/32
      - 166.9.233.36/32
      ports:
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: us-east
      # Taken from: https://cloud.ibm.com/docs/log-analysis?topic=log-analysis-endpoints
      - 166.9.20.72/32
      - 166.9.20.73/32
      - 166.9.22.35/32
      - 166.9.22.36/32
      # New IP addresses added on 1/19/2023
      - 166.9.24.171/32 
      - 166.9.22.194/32 
      - 166.9.68.157/32
      # New IP addresses added on 10/19/2023
      - 166.9.231.235/32
      - 166.9.232.23/32
      - 166.9.233.10/32
      # End new IP address list
      ports:
      - 80
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: US East nets
      - 166.9.20.76/32
      - 166.9.22.38/32
      ports:
      - 514
      - 6514
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: US East nets
      - 166.9.20.77/32
      - 166.9.22.39/32
      ports:
      - 514
    protocol: UDP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
